# job-search

./: .gitignore  DOCUMENTATION_API_LINKEDIN_CHAMPS.md  Dockerfile  EMPLOIS_CONCEPTEUR_REDACTEUR_CLASSES.md  EXEMPLES_UTILISATION_ENHANCED.md  RAPPORT_ANALYSE_PERTINENCE_COMPLETE.md  RAPPORT_ANALYSE_PERTINENCE_COMPLETE_100_EMPLOIS.md  README-FINAL.md  README.md  README_WORKFLOW.md  RESUME_ANALYSE_CONCEPTEUR_REDACTEUR.md  RESUME_REVOLUTION_ANALYSE.md  STATISTIQUES_RAPIDES.md  WORKFLOW.md  WORKFLOW_ANALYSE_COMPLETE.md  WORKFLOW_PRODUCTION.md  analyse_concepteur_redacteur.py  analyse_pertinence_complete.py  analyse_pertinence_complete_enhanced.py  analyze_operators_effectiveness.py  complete_extraction.py  comprehensive_seo_search.py  explore_all_data.py  final_search.py  final_search_clean.py  manual.md  pyproject.toml  quick_seo_variants.py  run_extraction.py  run_search.py  run_server.py  search_seo_50_jobs.py  search_seo_idf.py  search_seo_specialist_100.py  start_workflow.py  suivi_candidatures_concepteur_redacteur.csv  test_api_fields.py  test_focused_extraction.py  test_search.py  test_search_enhanced.py
config/: .env  smithery.yaml
data/exports/: RAPPORT_SEO_SPECIALIST_100_20250823_120659.md  analyse_concepteur_redacteur_20250823_145033.json  analyse_pertinence_complete_20250823_103617.json  analyse_pertinence_complete_20250823_111513.json  analyse_pertinence_complete_20250823_114622.json  index.html  (+25 more)
docs/: INDEX.md  README.md  architecture.md  linkedin_search_operators.md
job-tracker-simple/: README.md
src/: .env  PKG-INFO  SOURCES.txt  linkedin.py
(+47 files in other folders)
