[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "linkedin-api>=2.3.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
authors = [
    { name = "Hritik Raj", email = "hritikraj_03@outlook.com" }
]

[project.urls]
Homepage = "https://github.com/Hritik003/linkedin-mcp"

